# SecRandom

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_v1.2.0.0.md  CHANGES.md  CONTRIBUTING.md  INSTALLER_GUIDE.md  LINUX_PORTING.md  PACKAGING.md  PACKAGING_QUICKSTART.md  PACKAGING_SUMMARY.md  PYSIDE6_MIGRATION.md  README.md  SR64.aip  SecRandom.aip  Secrandom.spec  build.py  build_nuitka.py  build_pyinstaller.py  build_tool.py  bump_deps.py  cookie.json  fuh_metadata.yaml  installer.iss  main.py  packaging_utils.py  pyproject.toml  pyrightconfig.json  requirements-linux.txt  requirements-windows-win7_x64_x86.txt  requirements-windows.txt  requirements.txt  test_packaging.py  update_version.py  version_info.txt
.github/ISSUE_TEMPLATE/: bug反馈.md  安全漏洞报告.md  性能问题报告.md  文档改进.md  新功能建议.md  问题咨询.md
.github/workflows/: build-linux.yml  build-nuitka.yml  build-unified.yml  build.yml  codeQL.yml  contribution.yml  pre-commit.yml  pyright.yml  release.yml  ruff.yml
Contribution_value/: contribution_calculator.py  requirements.txt
README_ALL/: readme_bailu.md  readme_en.md
TEMP/: 1.json
app/: __init__.py
app/Language/: ZH_CN.py  ZH_CN.py.bak  obtain_language.py
app/Language/modules/: __init__.py  basic_settings.py  custom_settings.py  extraction_settings.py  history.py  home.py  import_student_name.py  list_management.py  lottery_list.py  lottery_main.py  more_settings.py  notification_settings.py  remaining_list.py  roll_call_list.py  roll_call_main.py  safety_settings.py  sidebar_settings.py  sidebar_tray_management.py  update.py  voice_settings.py
app/SecRandom/: enc_set.json
app/Settings/: Settings.json  config.json
app/common/: Changeable_history_reward_settings.py  Changeable_history_settings.py  Program_functionality_settings.py  about.py  advanced_settings.py  another_window.py  config.py  deps_loader.py  fixed_url_setting.py  floating_window_settings.py  foundation_settings.py  global_settings.py  global_signals.py  global_vars.py  group_player_settings.py  history_cleaner.py  history_reward_settings.py  history_settings.py  instant_draw_setting.py  instant_draw_settings.py  list_settings.py  message_receiver.py  message_sender.py  multi_player_settings.py  password_dialog.py  password_settings.py  path_utils.py  personal_settings.py  pumping_people_setting.py  pumping_reward_setting.py  reward_settings.py  rewards_settings.py  roll_call_settings.py  senior_settings.py  settings_reader.py  sidebar_settings.py  single_player_settings.py  singleapplication.py  sqlite_utils.py  theme_settings.py  (+7 more)
app/common/IPC_URL/: __init__.py  protocol_manager.py  security_verifier.py  url_ipc_handler.py
app/common/notification/: notification_service.py
app/common/safety/: password.py  totp.py  usb.py  verify_ops.py
app/config/: secrets.json
app/config/security/: secrets.json
app/page_building/: another_window.py  main_window_page.py  page_template.py  security_window.py  settings_window_page.py  window_template.py
app/plugin/SecRandom-plugins/: README.md  main.py  plugin.json
app/plugins/: 插件依赖离线_README.md  插件开发_README.md
app/resource/class/: class.ini  group.ini
app/resource/documents/: vocabulary_mapping.json  高考3500.xlsx
app/resource/group/: 第一小组.ini
app/resource/history/: 1.json
app/resource/students/: 1.ini  高一2班.ini
app/resources/Language/: ZH_CN.json
app/resources/assets/: FluentSystemIcons-Filled.json
app/resources/history/roll_call_history/: 示例班级.json
app/tools/: config.py  extract.py  font_manager.py  history.py  language_manager.py  list.py  lottery_utils.py  path_utils.py  personalised.py  result_display.py  roll_call_utils.py  secure_store.py  settings_access.py  settings_default.py  settings_default_storage.py  update_utils.py  url_handler.py  variable.py
app/update/: update_SectionIstool.bat
app/view/: Changeable_history.py  SecRandom.py  __init__.py  extract_single_setting.py  global_setting.py  group.py  guide_window.py  history.py  levitation.py  more_setting.py  multiplayer.py  password_setting.py  pumping_floating.py  quicksetup.py  setting.py  settings.py  single.py  startup_window.py  update_log_window.py
app/view/another_window/: __init__.py  bind_usb.py  contributor.py  gender_setting.py  group_setting.py  import_prize_name.py  import_student_name.py  name_setting.py  prize_name_setting.py  prize_weight_setting.py  remaining_list.py  set_class_name.py  set_password.py  set_pool_name.py  set_totp.py  unbind_usb.py  verify_password.py
app/view/floating_window/: levitation.py
app/view/main/: __init__.py  about.py  lottery.py  roll_call.py  window.py
app/view/main_page/: auxiliary_pumping_people.py  face_recognition_pumping.py  flash_pumping_people.py  history.py  history_handoff_setting.py  history_reward.py  levitation_pumping_people.py  lottery.py  pumping_people.py  pumping_reward.py  vocabulary_learning.py  vocabulary_pk_settings.py
app/view/plugins/: management.py  market.py  plugin_handoff.py  plugin_settings.py  settings.py
app/view/settings/: __init__.py  about.py  basic_settings.py  floating_window_management.py  home.py  safety_settings.py  settings.py  update.py
app/view/settings/custom_settings/: __init__.py  floating_window_management.py  page_management.py  sidebar_tray_management.py
app/view/settings/extraction_settings/: __init__.py  custom_draw_settings.py  instant_draw_settings.py  lottery_settings.py  quick_draw_settings.py  roll_call_settings.py
app/view/settings/history/: __init__.py  history_management.py  (+2 more)
app/view/settings_page/: Changeable_history.py  Changeable_history_handoff_setting.py  Changeable_history_reward.py  about_setting.py  custom_setting.py  extract_group_setting.py  extract_multi_setting.py  extract_single_setting.py  global_setting.py  more_setting.py  password_setting.py  plugin_setting.py  pumping_handoff_setting.py  pumping_people_setting.py  quicksetup.py  voice_engine_setting.py
app/view/tray/: __init__.py  tray.py
batch_scripts/: remove_keep_alive.bat  setup_keep_alive.bat
resources/: README_EN.md  README_ZH_TW.md  SecRandom.icns
(+30 files in other folders)
