[project]
name = "secrandom"
version = "1.1.0"
description = "公平随机抽取系统 - Modern educational tool with intelligent weighting algorithm"
readme = "README.md"
requires-python = ">=3.13"

dependencies = ["PySide6-Fluent-Widgets>1.9.1", "pyside6>6.6.3.1", "pysidesix-frameless-window>=0.7.4", "darkdetect==0.8.0", "asyncio~=4.0.0", "loguru==0.7.3", "colorama==0.4.6", "packaging==25.0", "numpy>=2.0.0", "pandas>2.0.3", "pillow>=10.4.0", "openpyxl==3.1.5", "requests==2.32.5", "edge-tts==7.2.3", "pyttsx3==2.99", "sounddevice==0.5.3", "soundfile==0.13.1", "psutil~=7.1.3", "keyboard==0.13.5", "pyotp==2.9.0", "pycryptodome==3.23.0", "pyqrcode~=1.2.1", "pypng~=0.20220715.0", "colorthief==0.2.1", "pywin32==311", "win32_setctime==1.2.0; platform_system == 'Windows'", "winshell==0.6; platform_system == 'Windows'", "comtypes==1.4.13", "wmi==1.5.1; platform_system == 'Windows'", "pycaw==20251023", "pulsectl==24.8.0; platform_system == 'Linux'", "sip~=6.14.0", "jinja2~=3.1.6", "nuitka>=2.8.6", "imageio>=2.37.2", "pre-commit>=4.4.0"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

# 添加这个配置告诉 setuptools 不要尝试自动发现包
[tool.setuptools]
py-modules = []

[tool.uv]
dev-dependencies = [
    "pytest>=6.0",
    "black",
    "flake8",
    "pyright>=1.1.407",
    "pre-commit>=3.5.0",
    "ruff>=0.14.3",
    "tomlkit>=0.13.3",
]

[tool.ruff]
# 忽略特定错误/警告（例如 F405: "name may be undefined, or defined from star imports"）
ignore = ["F405","E722","E501","B012","F403","C901","B007","F841","C416","C414","E402"]
# 可选：关闭某些规则或配置
extend-ignore = []
select = ["E", "F", "W", "C", "B", "B9"]
